--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Home</title>
+<title>HOME</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -28,20 +28,20 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Home" />
+</noscript><meta property="og:title" content="HOME" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.lorrrie.com/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Home"/>
+<meta name="twitter:title" content="HOME"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Home",
+  "name": "HOME",
   "url": "https://www.lorrrie.com/",
   "description": "",
   "thumbnailUrl": "https://www.lorrrie.com/favicon.ico",
@@ -57,7 +57,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://www.lorrrie.com/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://www.lorrrie.com/" accesskey="h" title="HOME (Alt + H)">HOME</a>
             <div class="logo-switches">
             </div>
         </div>
@@ -145,7 +145,7 @@ As the wind blew, I saw something bright was hidden behind the clouds. It shines
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://www.lorrrie.com/">Home</a></span>
+    <span>&copy; 2022 <a href="https://www.lorrrie.com/">HOME</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
