算了，就这样吧 wc0517/new_lorrrie_deploy@04a918461e044dc0f6bbb7964160a8dbbc886c7a

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | untimely</title>
+<title>404 Page not found | UNWANTED</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -42,7 +42,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://www.lorrrie.com/" accesskey="h" title="untimely (Alt + H)">untimely</a>
+            <a href="https://www.lorrrie.com/" accesskey="h" title="UNWANTED (Alt + H)">UNWANTED</a>
             <div class="logo-switches">
             </div>
         </div>
@@ -55,7 +55,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://www.lorrrie.com/">untimely</a></span>
+    <span>&copy; 2022 <a href="https://www.lorrrie.com/">UNWANTED</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
